# simulative-basic-python

./: .gitignore  README.md  config.ini  main.py  pyproject.toml
resource/: google-credentials.json
simbp/: __init__.py  database.py  integration.py  logging.py  model.py  report.py
var/docker/simbp/: docker-compose.yaml
var/docker/simbp/initdb/: init.sql
